# Process this file with autoconf to produce a configure script.
AC_INIT(engine/flowrow-sort.c, 0.9, dberlin@dberlin.org)
AM_INIT_AUTOMAKE(libbanshee, 0.9)
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
# Checks for libraries.
# FIXME: Replace `main' with a function in `-llambda':
#AC_CHECK_LIB([lambda], [main])
# FIXME: Replace `main' with a function in `-lm':
#AC_CHECK_LIB([m], [main])


if test x$GCC = xyes; then
  ac_libbanshee_warn_cflags='-W -Wall -pedantic -Wwrite-strings  -Wstrict-prototypes -Wmissing-prototypes'
fi
AC_SUBST(ac_libbanshee_warn_cflags)

AM_MAINTAINER_MODE
# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h limits.h stddef.h stdlib.h string.h sys/param.h unistd.h])

gcc_AC_HEADER_STDBOOL
gcc_AC_C__BOOL
# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([atexit dup2 floor getpagesize memset munmap])

AC_OUTPUT([Makefile
                 engine/Makefile
                 libcompat/Makefile
                 points-to/Makefile])
